test/preprocessor/fail/invalid_concat.osl
#define CAT(x, y) x ## y
shader test() {
    int i = CAT(1, s);
}
